2011-02-03  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/wmi-howto.txt: Updated to match new wmi version and new patch.

2011-02-02  Michael Wiegand <michael.wiegand@greenbone.net>

	Switch libwmiclient detection to pkg-config.

	* CMakeLists.txt: Use pkg_check_modules to find libwmiclient.

	* nasl/CMakeLists.txt: Use WMICLIENT_FOUND instead of HAVE_WMI as an
	indicator for the presence of libwmiclient.

2011-02-02  Michael Wiegand <michael.wiegand@greenbone.net>

	Install openvas-services into the correct location according to the
	FHS.

	* CMakeLists.txt: Install openvas-services to OPENVAS_DATA_DIR
	instead of OPENVAS_STATE_DIR.

	* misc/CMakeLists.txt: Define OPENVAS_DATA_DIR if it is set
	OPENVAS_DATA_DIR.

	* misc/services.h: Update define so OPENVAS_SERVICES points to the
	correct location.

2011-02-02  Michael Wiegand <michael.wiegand@greenbone.net>

	Move installation of openvas-services file from openvas-scanner to
	openvas-libraries since the only function using it resides in
	openvas-libraries.

	* openvas-services: New. Was openvas-scanner/openvas-services.

	* CMakeLists.txt: Add handling of openvas-services.

2011-02-01  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Improved example as suggested by Felix Wolfsteller.

2011-02-01  Michael Wiegand <michael.wiegand@greenbone.net>

	Add/resurrect pkg-config support to openvas-libraries and remove now
	obsolete libopenvas-config infrastructure.

	* tools/libopenvas-config.in: Removed.

	* doc/libopenvas-config.1: Removed.

	* libopenvas.pc.in: New. Template for pkg-config metadata file for
	openvas-libraries.

	* CMakeLists.txt: Move checks for glib and gnutls to pkg-config.
	Remove handling of libopenvas-config. Add handling of libopenvas.pc.

	* INSTALL: Update requirements. Add hint on setting PKG_CONFIG_PATH.

2011-01-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/settings.c: Adapt settings handling to new openvas-scanner
	behaviour.