@@ -128,7 +128,15 @@ if (NOT SBINDIR)
 endif (NOT SBINDIR)
 
 if (NOT LIBDIR)
-  set (LIBDIR "${EXEC_PREFIX}/lib")
+  set (_DEFAULT_LIBRARY_INSTALL_DIR lib)
+  if (EXISTS "${EXEC_PREFIX}/lib32/" AND CMAKE_SIZEOF_VOID_P EQUAL 4)
+    set (_DEFAULT_LIBRARY_INSTALL_DIR lib32)
+  endif (EXISTS "${EXEC_PREFIX}/lib32/" AND CMAKE_SIZEOF_VOID_P EQUAL 4)
+  if (EXISTS "${CMAKE_INSTALL_PREFIX}/lib64/" AND CMAKE_SIZEOF_VOID_P EQUAL 8)
+    set (_DEFAULT_LIBRARY_INSTALL_DIR lib64)
+  endif (EXISTS "${CMAKE_INSTALL_PREFIX}/lib64/" AND CMAKE_SIZEOF_VOID_P EQUAL 8)
+  set( LIBRARY_INSTALL_DIR "${_DEFAULT_LIBRARY_INSTALL_DIR}")
+  set (LIBDIR "${EXEC_PREFIX}/${LIBRARY_INSTALL_DIR}")
 endif (NOT LIBDIR)
 
 if (NOT LOCALSTATEDIR)
