@@ -1,5 +1,10 @@
 2011-02-03  Michael Wiegand <michael.wiegand@greenbone.net>
 
+	* CMakeLists.txt: Attempt to detect whether we are installing on a 32
+	or 64 bit system and set LIBDIR accordingly.
+
+2011-02-03  Michael Wiegand <michael.wiegand@greenbone.net>
+
 	* doc/wmi-howto.txt: Updated to match new wmi version and new patch.
 
 2011-02-02  Michael Wiegand <michael.wiegand@greenbone.net>
